# ds-modeleval

./: .gitignore  LICENSE  app.py  pyproject.toml  requirements.txt
